[gd_scene load_steps=3 format=3 uid="uid://dncwwspw7amnl"]

[ext_resource type="Script" path="res://game/screens/player_data/PlayerData.gd" id="1_ccj3a"]
[ext_resource type="Script" path="res://addons/collapsible_container/collapsible_elements/collapsible_container.gd" id="2_y3fhx"]

[node name="PlayerData" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ccj3a")

[node name="PlayerDataContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="NameLabel" type="Label" parent="PlayerDataContainer"]
layout_mode = 2

[node name="LevelLabel" type="Label" parent="PlayerDataContainer"]
layout_mode = 2

[node name="ExperienceLabel" type="Label" parent="PlayerDataContainer"]
layout_mode = 2

[node name="MoneyLabel" type="Label" parent="PlayerDataContainer"]
layout_mode = 2

[node name="InventoryCollapsibleContainer" type="Control" parent="PlayerDataContainer"]
process_mode = 3
editor_description = "
			A custom/plugin Control node capable of hiding and revealing its children by folding and unfolding.
			
Give feedback at: https://github.com/ArshvirGoraya/Godot-Collapsible-Container"
clip_contents = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
script = ExtResource("2_y3fhx")
folding_direction_preset = 10
sizing_constraint = 1
sizing_node = NodePath("VBoxContainer")

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerDataContainer/InventoryCollapsibleContainer"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="UpgradesCollapsibleContainer" type="Control" parent="PlayerDataContainer"]
process_mode = 3
editor_description = "
			A custom/plugin Control node capable of hiding and revealing its children by folding and unfolding.
			
Give feedback at: https://github.com/ArshvirGoraya/Godot-Collapsible-Container"
clip_contents = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
script = ExtResource("2_y3fhx")
folding_direction_preset = 10
sizing_constraint = 1
sizing_node = NodePath("VBoxContainer")

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerDataContainer/UpgradesCollapsibleContainer"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
